--- a/public/client/manage-booking.html
+++ b/public/client/manage-booking.html
@@ -281,7 +281,11 @@
         <!-- Action Buttons -->
         <div class="d-flex justify-content-end gap-3 mt-4">
           <a href="cancel-page.html"><button class="request-rebook-btn">Request Rebook</button></a>
-          <a href="cancel-page.html"><button class="request-cancel-btn">Request Cancel</button></a>
+          
+          <button class="request-cancel-btn" id="requestCancelBtn">
+            Request Cancel
+          </button>
+
         </div>
       </div>
     </div>
