--- a/public/client/confirmation.html
+++ b/public/client/confirmation.html
@@ -432,8 +432,11 @@
         <!-- Continue button -->
     <!-- Continue button -->
     <div style="text-align:right">
-      <a href="#" class="btn-continue" onclick="finalizeBooking()">Confirm & Book</a>
+      <a href="#" class="btn-continue" id="confirmBookingBtn" onclick="finalizeBooking(event)">
+        Confirm & Book
+      </a>
     </div>
+
 
     </div> 
 
